@@ -1,5 +1,8 @@
 * [shaper] upped library to version 1.2.0 to reflect changes.
 
+* [shaper] added new client.lookup_by_woeid method which should be
+  used instead of the now-deprecated lookup_location method.
+
 * [shaper] use new Yahoo Weather API at 
   http://weather.yahooapis.com/forecastrss
 
